--- a/driver/js/package.json
+++ b/driver/js/package.json
@@ -27,6 +27,7 @@
     "@babel/plugin-transform-runtime": "^7.19.1",
     "@babel/preset-env": "^7.19.1",
     "@babel/types": "^7.19.0",
+    "@hippy/hermesc": "^0.1.0",
     "@microsoft/api-extractor": "^7.23.1",
     "@rollup/plugin-alias": "^3.1.9",
     "@rollup/plugin-babel": "^5.3.1",
@@ -38,7 +39,6 @@
     "@types/web": "^0.0.48",
     "@typescript-eslint/eslint-plugin": "^5.38.0",
     "@typescript-eslint/parser": "^5.38.0",
-    "@hippy/hermesc": "^0.1.0",
     "ansi-regex": "^6.0.1",
     "ava": "^2.4.0",
     "chalk": "^4.1.2",
@@ -78,7 +78,7 @@
     "ttypescript": "~1.5.15",
     "typescript": "^4.8.3",
     "typescript-transform-paths": "^3.3.1",
-    "vue": "^2.6.14",
+    "vue": "2.6.14",
     "watch": "^0.13.0"
   },
   "_moduleAliases": {
