--- a/driver/js/packages/hippy-vue-css-loader/package.json
+++ b/driver/js/packages/hippy-vue-css-loader/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hippy/vue-css-loader",
-  "version": "unspecified",
+  "version": "3.4.0",
   "description": "hippy-vue style loader module for webpack",
   "main": "dist/css-loader.js",
   "homepage": "https://hippyjs.org",
