--- a/driver/js/packages/hippy-vue-loader/package.json
+++ b/driver/js/packages/hippy-vue-loader/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hippy/vue-loader",
-  "version": "unspecified",
+  "version": "3.4.0",
   "description": "Vue single-file component loader for Webpack",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -38,10 +38,10 @@
     "minimist": "^1.2.6",
     "null-loader": "^0.1.1",
     "postcss": "^8.4.5",
+    "postcss-class-prefix": "~0.3.0",
     "vue": "^2.5.16",
     "vue-template-compiler": "^2.5.16",
-    "webpack": "^4.1.0",
-    "postcss-class-prefix": "~0.3.0"
+    "webpack": "^4.1.0"
   },
   "directories": {
     "lib": "lib",
