--- a/driver/js/packages/hippy-web-renderer/package.json
+++ b/driver/js/packages/hippy-web-renderer/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hippy/web-renderer",
-  "version": "unspecified",
+  "version": "3.4.0",
   "description": "hippy web renderer",
   "main": "./dist/index.js",
   "homepage": "https://hippyjs.org",
