--- a/framework/android/gradle.properties
+++ b/framework/android/gradle.properties
@@ -43,7 +43,7 @@ NDK_VERSION=25.0.8775105
 #
 # Specifies SDK version
 #
-VERSION_NAME=unspecified
+VERSION_NAME=3.4.0
 
 #
 # Whether to skip build C/C++ code
